# fletcher-aws

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  project-generate.sh  sourceme.sh
.github/workflows/: assets.yml  test.yml
examples/: project-generate.sh
examples/skeleton/1DDR/design/: cl_dram_dma_defines.vh  cl_fletcher_aws_1DDR.sv
examples/skeleton/1DDR/software/runtime/: Makefile  example.cpp
examples/skeleton/1DDR/software/src/: lib.cpp
examples/skeleton/1DDR/verif/scripts/: Makefile
examples/skeleton/4DDR/design/: cl_dma_pcis_slv.sv  cl_dram_dma_defines.vh  cl_fletcher_aws.sv  cl_fletcher_aws_4DDR.sv  cl_fletcher_aws_pkg.sv
examples/skeleton/4DDR/software/runtime/: example.cpp
examples/skeleton/4DDR/verif/scripts/: Makefile  Makefile.questa  top.vivado.f
examples/stringwrite/: README.md
examples/stringwrite/design/: cl_fletcher_aws_defines.vh
examples/stringwrite/design/vhdl/: AxiTop.gen.vhd  Kernel_Mantle.gen.vhd  Kernel_Nucleus.gen.vhd  Kernel_StringWrite.gen.vhd  SimTop_tc.gen.vhd  sources.encrypt.tmp.txt  sources.encrypt.txt  sources.tmp.txt  sources.txt
examples/sum/1DDR/design/: cl_fletcher_aws_1DDR.sv
examples/sum/1DDR/design/vhdl/: SimTop_tc.gen.vhd  sources.encrypt.tmp.txt  sources.encrypt.txt  sources.tmp.txt  sources.txt
examples/sum/1DDR/software/runtime/: sum.cpp
examples/sum/4DDR/design/vhdl/: sources.encrypt.tmp.txt  sources.encrypt.txt  sources.tmp.txt  sources.txt
examples/sum/4DDR/software/runtime/: sum.cpp
examples/sum/4DDR/verif/scripts/: Makefile
examples/sum/design/vhdl/: sources.encrypt.tmp.txt  sources.encrypt.txt  sources.tmp.txt
examples/sum/software/src/: test_main.cpp
examples/sum/verif/scripts/: Makefile  top.vivado.vhdl.f
examples/tidre/1DDR/design/: README.md  cl_fletcher_aws_1DDR.sv
examples/tidre/1DDR/design/vhdl/: AxiTop.gen.vhd  SimTop_tc.gen.vhd  mmio.gen.vhd
examples/tidre/1DDR/software/runtime/: .project  Makefile  tidre.cpp
examples/tidre/1DDR/verif/scripts/: top.vivado.f  top.vivado.vhdl.f
examples/tidre/4DDR/design/: cl_dram_dma_defines.vh  cl_fletcher_aws_4DDR.sv
examples/tidre/4DDR/design/vhdl/: Matcher.vhd  sources.txt
examples/tidre/4DDR/software/runtime/: .cproject  tidre.cpp
examples/tidre/4DDR/verif/: README.md
examples/tidre/4DDR/verif/scripts/: Makefile  top.questa.vhdl.f
project-skeleton/: README.md
project-skeleton/design/: cl_dma_pcis_slv.sv  cl_fletcher_aws.sv
project-skeleton/verif/scripts/: Makefile
runtime/: CMakeLists.txt
runtime/runtime/: CMakeLists.txt  README.md
runtime/runtime/include/: fletcher_aws.h
runtime/runtime/src/: fletcher_aws.c  fletcher_aws_private.h
runtime/runtime_sim/: CMakeLists.txt  README.md
runtime/runtime_sim/include/: fletcher_aws_sim.h
runtime/runtime_sim/src/: fletcher_aws_sim.c  fletcher_aws_sim_private.h
runtime/src/: fletcher_aws.c  fletcher_aws.h
sim_runtime/: CMakeLists.txt
sim_runtime/src/: fletcher_aws_sim.c  fletcher_aws_sim.h
